<resources>
    <string name="app_name">AnalyticsJDGP</string>
    <string name="event">Event</string>
    <string name="test_crash">Test crash</string>
    <string name="collect_on">Collect on</string>
    <string name="collect_off">Collect off</string>
    <string name="index">Index exception</string>
    <string name="open_pdf">Open PDF URL</string>
    <string name="check_out">Funnel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_activity">Go to webView</string>
</resources>
